Sebastien: -For deployement I changed the URL of img

--- a/Stojic/Views/Home/Index.cshtml
+++ b/Stojic/Views/Home/Index.cshtml
@@ -14,23 +14,26 @@ Outre ses propres plantations, Stojić achète Žilavka et Blatina des meilleurs
 La production de vins blancs se fait exclusivement dans des barriques inox, tandis que les vins rouges sont fermentés, vieillis et conservés en barriques de bois.
 
 
-<div class="bgimg1" style="background-image:url('../images/DSC_0864.jpg')">
+<div class="bgimg1" style="background-image:url('images/DSC_0864.jpg')">
     <div style="margin-top:0px; margin-left:20px;margin-right:20px;color:forestgreen;background-color:whitesmoke;opacity:0.5"><h1>Bosnia Herzegovina product</h1></div>
 </div>
-<div class="bgimg1" style="background-image:url('../images/DSC_0862.jpg')">
+
+ <img src="~/images/DSC_0864.jpg" alt="ASP.NET" class="img-responsive" />
+ 
+<div class="bgimg1" style="background-image:url('images/DSC_0862.jpg')">
     <div style="margin-top:0px; margin-left:20px;margin-right:20px;color:forestgreen;background-color:whitesmoke;opacity:0.5"><h1>20 000 m2 vineyard area</h1></div>
 </div>
-<div class="bgimg1" style="background-image:url('../images/DSC_0852.jpg')">
+<div class="bgimg1" style="background-image:url('images/DSC_0852.jpg')">
     <div style="margin-top:0px;padding-top:0px; margin-left:20px;margin-right:20px; color:forestgreen;background-color:whitesmoke;opacity:0.5"><h1>Blatina 0,75 l, Chardonnay 0,75 l, Cabernet souvignon 0,75 l.</h1></div>
 </div>
-<div class="bgimg1" style="background-image:url('../images/DSC_0845.jpg')"></div>
-<div class="bgimg1" style="background-image:url('../images/DSC_0846.jpg')"></div>
-<div class="bgimg1" style="background-image:url('../images/DSC_0848.jpg')"></div>
-<div class="bgimg1" style="background-image:url('../images/DSC_0858.jpg')">
+<div class="bgimg1" style="background-image:url('images/DSC_0845.jpg')"></div>
+<div class="bgimg1" style="background-image:url('images/DSC_0846.jpg')"></div>
+<div class="bgimg1" style="background-image:url('images/DSC_0848.jpg')"></div>
+<div class="bgimg1" style="background-image:url('images/DSC_0858.jpg')">
     <div style="margin-top:0px;padding-top:0px; margin-left:20px;margin-right:20px; color:forestgreen;background-color:whitesmoke;opacity:0.5"><h1>EU Certification for exportation</h1></div>
 </div>
-<div class="bgimg1" style="background-image:url('../images/DSC_0860.jpg')"></div>
+<div class="bgimg1" style="background-image:url('images/DSC_0860.jpg')"></div>
 
-<div class="bgimg1" style="background-image:url('../images/Last.jpg');height:750px">
+<div class="bgimg1" style="background-image:url('images/Last.jpg');height:750px">
     <div style="margin-top:0px;padding-top:0px; margin-left:20px;margin-right:20px; color:forestgreen;background-color:whitesmoke;opacity:0.5"><h1>High quality product with numerus distinction</h1></div>
 </div>
